Fixed: Swagger documentation
